--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "antd": "^5.21.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-lazyload": "^3.2.1",
     "socket.io-client": "^4.8.0",
     "ws": "^8.18.0"
   },
